# memecreator-ut

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.json.in  memecreator.apparmor  memecreator.desktop.in  pyproject.toml  requirements.txt
python-lib/: config.json
python-lib/Pillow-7.2.0.dist-info/: RECORD
python-lib/Utils_Config-1.0.0.dist-info/: LICENSE  METADATA  RECORD  top_level.txt
python-lib/utils_config/: __init__.py
python-lib/utils_config/test/: __init__.py  utils_config_test.py
qml/: AboutDialog.qml  Main.qml  SystemImages.qml
scripts/: get_depencies.sh
src/: main.py
