[tool.poetry]
name = "memecreator_app"
version = "0.1.0"
description = "Python meme image creator"
authors = ["yeyeto2788 <juanernestobiondi@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
bandit = "^1.7.4"
pytest-cov = "^3.0.0"
clickable-ut = "^7.3.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
